--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
                 <li> Our paper <a href="https://arxiv.org/pdf/2104.06703.pdf">Deep Permutation Equivariant Structure from Motion</a> was accepted to ICCV 2021 as an <b>oral presentation</b>!</li>
                 <li> Two papers accepted to ICML 2021: <a href="https://arxiv.org/abs/2010.08853">From Local Structures to Size Generalization in Graph Neural Networks</a> and <a href="https://arxiv.org/abs/2010.05313">Controlling Graph Dynamics with  Reinforcement Learning and Graph Neural Networks</a>.</li>
                 <li> Two papers accepted to ICLR 2021: <a href="https://arxiv.org/pdf/2010.02449">On the Universality of Rotation Equivariant Point Cloud Networks</a> and <a href="https://arxiv.org/abs/2007.02693">Auxiliary Learning by Implicit Differentiation</a>.</li>
@@ -130,6 +131,28 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/ESAN/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Equivariant Subgraph Aggregation Networks</h2>
+                 <p>
+                   Beatrice Bevilacqua*, Fabrizio Frasca*, Derek Lim*, Balasubramaniam Srinivasan, Chen Cai, Gopinath Balamurugan, Michael M. Bronstein, Haggai Maron (*equal contribution)<br>
+                   <i> Technical report, October 2021  </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Message-passing neural networks (MPNNs) are the leading architecture for deep learning on graph-structured data, in large part due to their simplicity and scalability. Unfortunately, it was shown that these architectures are limited in their expressive power. This paper proposes a novel framework called Equivariant Subgraph Aggregation Networks (ESAN) to address this issue. Our main observation is that while two graphs may not be distinguishable by an MPNN, they often contain distinguishable subgraphs. Thus, we propose to represent each graph as a set of subgraphs derived by some predefined policy, and to process it using a suitable equivariant architecture. We develop novel variants of the 1-dimensional Weisfeiler-Leman (1-WL) test for graph isomorphism, and prove lower bounds on the expressiveness of ESAN in terms of these new WL variants. We further prove that our approach increases the expressive power of both MPNNs and more expressive architectures. Moreover, we provide theoretical results that describe how design choices such as the subgraph selection policy and equivariant neural architecture affect our architecture's expressive power. To deal with the increased computational cost, we propose a subgraph sampling scheme, which can be viewed as a stochastic version of our framework. A comprehensive set of experiments on real and synthetic datasets demonstrates that our framework improves the expressive power and overall performance of popular GNN architectures."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2110.02910" class="btn btn-default">Paper </a>
+             </div>
+
+      </div><!-- end of row -->
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
