--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-md-2"></div>
             <div id="my_photo" class="col-md-4 col-sm-7 col-xs-24">
-                <img src="images/haggai.jpg" alt="image 1"/>
+                <img src="images/haggai.png" alt="image 1"/>
             </div>
             <div class="col-md-1"></div>
             <div class="col-md-16">
