--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
             <div class="col-md-16">
                 <h2>Haggai Maron</h2>
 				<p>
-				I am a Research Scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a>.
-        My main fields of interest are machine learning, optimization and shape analysis. More specifically, I am working on applying deep learning to irregular domains (e.g., graphs, point clouds, and surfaces) and graph/shape matching problems.
-        I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
-        <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
-        I will be joining the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> as an Assistant Professor in 2023.
-        My CV can be found <a href="cv.pdf">here</a>.
+          I am a Research Scientist at <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> and a member of <a href="https://nv-research-tlv.netlify.app/">NVIDIA's TLV lab</a>.
+          My main fields of interest are machine learning, optimization, and shape analysis. In particular, I am working on applying deep learning to irregular domains (e.g., sets, graphs, point clouds, and surfaces), usually by leveraging their symmetry structure.
+          I completed my Ph.D. in 2019 at the Weizmann Institute of Science under the supervision of <a href="http://www.wisdom.weizmann.ac.il/~ylipman/">Prof. Yaron Lipman</a>. </br>
+          <!--I serve as a reviewer for NeurIPS, ICML, ICCV, SIGGRAPH, SIGGRAPH Asia and ACM TOG.<br>-->
+          I will be joining the <a href="https://vee.technion.ac.il/"> Faculty of Electrical and Computer Engineering at the Technion</a> as an Assistant Professor in 2023.
+          My CV can be found <a href="cv.pdf">here</a>.
 
 
 				<br>
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> A <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab"> new blog post on subggraph GNNs</a> on Towards Data Science.</li>
                 <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
                 <li> Our paper <a href="https://arxiv.org/pdf/2104.06703.pdf">Deep Permutation Equivariant Structure from Motion</a> was accepted to ICCV 2021 as an <b>oral presentation</b>!</li>
                 <li> Two papers accepted to ICML 2021: <a href="https://arxiv.org/abs/2010.08853">From Local Structures to Size Generalization in Graph Neural Networks</a> and <a href="https://arxiv.org/abs/2010.05313">Controlling Graph Dynamics with  Reinforcement Learning and Graph Neural Networks</a>.</li>
@@ -131,6 +132,26 @@
             <h1>Publications</h1>
         </div>
       </div>
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/wl_survey/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Weisfeiler and Leman go Machine Learning: The Story so far</h2>
+                 <p>
+                   Christopher Morris, Yaron Lipman, Haggai Maron, Bastian Rieck, Nils M. Kriege, Martin Grohe, Matthias Fey, Karsten Borgwardt<br>
+                   <i> Technical report, December 2021  </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="In recent years, algorithms and neural architectures based on the Weisfeiler-Leman algorithm, a well-known heuristic for the graph isomorphism problem, emerged as a powerful tool for machine learning with graphs and relational data. Here, we give a comprehensive overview of the algorithm's use in a machine learning setting, focusing on the supervised regime. We discuss the theoretical background, show how to use it for supervised graph- and node representation learning, discuss recent extensions, and outline the algorithm's connection to (permutation-)equivariant neural architectures. Moreover, we give an overview of current applications and future directions to stimulate further research."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2112.09992" class="btn btn-default">Paper </a>
+             </div>
+
+      </div><!-- end of row -->
 
 
       <!--Open problems -->
