--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 <p>
                 <h4>News</h4>
                 <ul>
+                <li> Our paper <a href="https://arxiv.org/abs/2110.02910"> Equivariant Subgraph Aggregation Networks</a> was accepted as a <b>spotlight presentation</b> to ICLR2022</li>
                 <li> A <a href="https://towardsdatascience.com/using-subgraphs-for-more-expressive-gnns-8d06418d5ab"> new blog post on subggraph GNNs</a> on Towards Data Science.</li>
                 <li> The Second <a href="https://gdl-israel.github.io/"> Israeli Workshop on Geometric Deep Learning</a> took place virtually on October 11th 2021. See full video recording <a href="https://youtu.be/aRWPSsDT9kk">here</a>.</li>
                 <li> Our paper <a href="https://arxiv.org/pdf/2104.06703.pdf">Deep Permutation Equivariant Structure from Motion</a> was accepted to ICCV 2021 as an <b>oral presentation</b>!</li>
@@ -133,6 +134,23 @@
         </div>
       </div>
 
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/federated_graph_hn/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Federated Learning with Heterogeneous Architectures using Graph HyperNetworks</h2>
+                 <p>
+                   Or Litany, Haggai Maron, David Acuna, Jan Kautz, Gal Chechik, Sanja Fidler
+                   <i> Technical report, January 2022  </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Standard Federated Learning (FL) techniques are limited to clients with identical network architectures. This restricts potential use-cases like cross-platform training or inter-organizational collaboration when both data privacy and architectural proprietary are required. We propose a new FL framework that accommodates heterogeneous client architecture by adopting a graph hypernetwork for parameter sharing. A property of the graph hyper network is that it can adapt to various computational graphs, thereby allowing meaningful parameter sharing across models. Unlike existing solutions, our framework does not limit the clients to share the same architecture type, makes no use of external data and does not require clients to disclose their model architecture. Compared with distillation-based and non-graph hypernetwork baselines, our method performs notably better on standard benchmarks. We additionally show encouraging generalization performance to unseen architectures."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2201.08459" class="btn btn-default">Paper </a>
+             </div>
+           </div><!-- end of row -->
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -154,6 +172,7 @@
       </div><!-- end of row -->
 
 
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
@@ -165,13 +184,15 @@
                  <h2>Equivariant Subgraph Aggregation Networks</h2>
                  <p>
                    Beatrice Bevilacqua*, Fabrizio Frasca*, Derek Lim*, Balasubramaniam Srinivasan, Chen Cai, Gopinath Balamurugan, Michael M. Bronstein, Haggai Maron (*equal contribution)<br>
-                   <i> Technical report, October 2021  </i> <br>
+                   <i> International Conference on Learning Representations (ICLR) 2022   </i> <br>
+                   <p style="color:red;"> Spotlight presentation (5% acceptance rate)</p>
+
                  </p>
                  <a class="btn btn-default abstract" ptitle="Message-passing neural networks (MPNNs) are the leading architecture for deep learning on graph-structured data, in large part due to their simplicity and scalability. Unfortunately, it was shown that these architectures are limited in their expressive power. This paper proposes a novel framework called Equivariant Subgraph Aggregation Networks (ESAN) to address this issue. Our main observation is that while two graphs may not be distinguishable by an MPNN, they often contain distinguishable subgraphs. Thus, we propose to represent each graph as a set of subgraphs derived by some predefined policy, and to process it using a suitable equivariant architecture. We develop novel variants of the 1-dimensional Weisfeiler-Leman (1-WL) test for graph isomorphism, and prove lower bounds on the expressiveness of ESAN in terms of these new WL variants. We further prove that our approach increases the expressive power of both MPNNs and more expressive architectures. Moreover, we provide theoretical results that describe how design choices such as the subgraph selection policy and equivariant neural architecture affect our architecture's expressive power. To deal with the increased computational cost, we propose a subgraph sampling scheme, which can be viewed as a stochastic version of our framework. A comprehensive set of experiments on real and synthetic datasets demonstrates that our framework improves the expressive power and overall performance of popular GNN architectures."> Abstract</a>
                  <a href="https://arxiv.org/abs/2110.02910" class="btn btn-default">Paper </a>
              </div>
+           </div><!-- end of row -->
 
-      </div><!-- end of row -->
 
 
       <!--Open problems -->
