--- a/index.html
+++ b/index.html
@@ -138,6 +138,43 @@
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
              <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/signnet/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Sign and Basis Invariant Networks for Spectral Graph Representation Learning</h2>
+                 <p>
+                   Derek Lim, Joshua Robinson, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka<br>
+                   <i> Technical report, Febuary 2022  </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2201.08459" class="btn btn-default">Paper </a>
+             </div>
+           </div><!-- end of row -->
+
+           <!--Open problems -->
+              <div class="row" id="templatemo_publications_LargeScaleBD">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5 col-sm-7 col-xs-24">
+                      <img src="projects/mtl/rep.png" width="300" " alt="">
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-16">
+                      <h2>Multi-Task Learning as a Bargaining Game</h2>
+                      <p>
+                        Aviv Navon, Aviv Shamsian, Idan Achituve, Haggai Maron, Kenji Kawaguchi,Gal Chechik,Ethan Fetaya <br>
+                        <i> Technical report, January 2022  </i> <br>
+                      </p>
+                      <a class="btn btn-default abstract" ptitle="In Multi-task learning (MTL), a joint model is trained to simultaneously make predictions for several tasks. Joint training reduces computation costs and improves data efficiency; however, since the gradients of these different tasks may conflict, training a joint model for MTL often yields lower performance than its corresponding single-task counterparts. A common method for alleviating this issue is to combine per-task gradients into a joint update direction using a particular heuristic. In this paper, we propose viewing the gradients combination step as a bargaining game, where tasks negotiate to reach an agreement on a joint direction of parameter update. Under certain assumptions, the bargaining problem has a unique solution, known as the \emph{Nash Bargaining Solution}, which we propose to use as a principled approach to multi-task learning. We describe a new MTL optimization procedure, Nash-MTL, and derive theoretical guarantees for its convergence. Empirically, we show that Nash-MTL achieves state-of-the-art results on multiple MTL benchmarks in various domains."> Abstract</a>
+                      <a href="https://arxiv.org/abs/2201.08459" class="btn btn-default">Paper </a>
+                  </div>
+                </div><!-- end of row -->
+
+
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
                  <img src="projects/federated_graph_hn/rep.png" width="300" " alt="">
              </div>
              <div class="col-md-1"></div>
@@ -152,24 +189,7 @@
              </div>
            </div><!-- end of row -->
 
-      <!--Open problems -->
-         <div class="row" id="templatemo_publications_LargeScaleBD">
-             <div class="col-md-1"></div>
-             <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/wl_survey/rep.png" width="300" " alt="">
-             </div>
-             <div class="col-md-1"></div>
-             <div class="col-md-16">
-                 <h2>Weisfeiler and Leman go Machine Learning: The Story so far</h2>
-                 <p>
-                   Christopher Morris, Yaron Lipman, Haggai Maron, Bastian Rieck, Nils M. Kriege, Martin Grohe, Matthias Fey, Karsten Borgwardt<br>
-                   <i> Technical report, December 2021  </i> <br>
-                 </p>
-                 <a class="btn btn-default abstract" ptitle="In recent years, algorithms and neural architectures based on the Weisfeiler-Leman algorithm, a well-known heuristic for the graph isomorphism problem, emerged as a powerful tool for machine learning with graphs and relational data. Here, we give a comprehensive overview of the algorithm's use in a machine learning setting, focusing on the supervised regime. We discuss the theoretical background, show how to use it for supervised graph- and node representation learning, discuss recent extensions, and outline the algorithm's connection to (permutation-)equivariant neural architectures. Moreover, we give an overview of current applications and future directions to stimulate further research."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2112.09992" class="btn btn-default">Paper </a>
-             </div>
 
-      </div><!-- end of row -->
 
 
 
@@ -196,7 +216,24 @@
 
              </div>
            </div><!-- end of row -->
+           <!--Open problems -->
+              <div class="row" id="templatemo_publications_LargeScaleBD">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5 col-sm-7 col-xs-24">
+                      <img src="projects/wl_survey/rep.png" width="300" " alt="">
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-16">
+                      <h2>Weisfeiler and Leman go Machine Learning: The Story so far</h2>
+                      <p>
+                        Christopher Morris, Yaron Lipman, Haggai Maron, Bastian Rieck, Nils M. Kriege, Martin Grohe, Matthias Fey, Karsten Borgwardt<br>
+                        <i> Technical report, December 2021  </i> <br>
+                      </p>
+                      <a class="btn btn-default abstract" ptitle="In recent years, algorithms and neural architectures based on the Weisfeiler-Leman algorithm, a well-known heuristic for the graph isomorphism problem, emerged as a powerful tool for machine learning with graphs and relational data. Here, we give a comprehensive overview of the algorithm's use in a machine learning setting, focusing on the supervised regime. We discuss the theoretical background, show how to use it for supervised graph- and node representation learning, discuss recent extensions, and outline the algorithm's connection to (permutation-)equivariant neural architectures. Moreover, we give an overview of current applications and future directions to stimulate further research."> Abstract</a>
+                      <a href="https://arxiv.org/abs/2112.09992" class="btn btn-default">Paper </a>
+                  </div>
 
+           </div><!-- end of row -->
 
 
       <!--Open problems -->
