--- a/index.html
+++ b/index.html
@@ -148,9 +148,27 @@
                    <i> Technical report, Febuary 2022  </i> <br>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
-                 <a href="https://arxiv.org/abs/2201.08459" class="btn btn-default">Paper </a>
+                 <a href="https://arxiv.org/abs/2202.13013" class="btn btn-default">Paper </a>
              </div>
            </div><!-- end of row -->
+
+           <!--Open problems -->
+              <div class="row" id="templatemo_publications_LargeScaleBD">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5 col-sm-7 col-xs-24">
+                      <img src="projects/simple_rot_equi/rep.png" width="300" " alt="">
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-16">
+                      <h2>A Simple and Universal Rotation Equivariant Point-cloud Network </h2>
+                      <p>
+                        Ben Finkelshtein, Chaim Baskin, Haggai Maron, Nadav Dym<br>
+                        <i> Technical report, Febuary 2022  </i> <br>
+                      </p>
+                      <a class="btn btn-default abstract" ptitle="Equivariance to permutations and rigid motions is an important inductive bias for various 3D learning problems. Recently it has been shown that the equivariant Tensor Field Network architecture is universal -- it can approximate any equivariant function. In this paper we suggest a much simpler architecture, prove that it enjoys the same universality guarantees and evaluate its performance on Modelnet40. "> Abstract</a>
+                      <a href="https://arxiv.org/abs/2203.01216" class="btn btn-default">Paper </a>
+                  </div>
+                </div><!-- end of row -->
 
            <!--Open problems -->
               <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -166,7 +184,7 @@
                         <i> Technical report, January 2022  </i> <br>
                       </p>
                       <a class="btn btn-default abstract" ptitle="In Multi-task learning (MTL), a joint model is trained to simultaneously make predictions for several tasks. Joint training reduces computation costs and improves data efficiency; however, since the gradients of these different tasks may conflict, training a joint model for MTL often yields lower performance than its corresponding single-task counterparts. A common method for alleviating this issue is to combine per-task gradients into a joint update direction using a particular heuristic. In this paper, we propose viewing the gradients combination step as a bargaining game, where tasks negotiate to reach an agreement on a joint direction of parameter update. Under certain assumptions, the bargaining problem has a unique solution, known as the \emph{Nash Bargaining Solution}, which we propose to use as a principled approach to multi-task learning. We describe a new MTL optimization procedure, Nash-MTL, and derive theoretical guarantees for its convergence. Empirically, we show that Nash-MTL achieves state-of-the-art results on multiple MTL benchmarks in various domains."> Abstract</a>
-                      <a href="https://arxiv.org/abs/2201.08459" class="btn btn-default">Paper </a>
+                      <a href="https://arxiv.org/abs/2202.01017" class="btn btn-default">Paper </a>
                   </div>
                 </div><!-- end of row -->
 
