--- a/index.html
+++ b/index.html
@@ -189,6 +189,25 @@
                 </div><!-- end of row -->
 
 
+                <!--Open problems -->
+                   <div class="row" id="templatemo_publications_LargeScaleBD">
+                       <div class="col-md-1"></div>
+                       <div class="col-md-5 col-sm-7 col-xs-24">
+                           <img src="projects/tensor_contraction/rep.png" width="300" " alt="">
+                       </div>
+                       <div class="col-md-1"></div>
+                       <div class="col-md-16">
+                           <h2>Optimizing Tensor Network Contraction Using Reinforcement Learning</h2>
+                           <p>
+                             Eli A Meirom, Haggai Maron, Shie Mannor, Gal Chechik <br>
+                             <i> The Multi-disciplinary Conference on Reinforcement Learning and Decision Making, RLDM 2022 </i> <br>
+                           </p>
+                           <a class="btn btn-default abstract" ptitle="Quantum Computing (QC) stands to revolutionize computing, but is currently still limited. To develop and test quantum algorithms today, quantum circuits are often simulated on classical computers. Simulating a complex quantum circuit requires computing the contraction of a large network of tensors. The order (path) of contraction can have a drastic effect on the computing cost, but finding an efficient order is a challenging combinatorial optimization problem. We propose a Reinforcement Learning (RL) approach combined with Graph Neural Networks (GNN) to address the contraction ordering problem. The problem is extremely challenging due to the huge search space, the heavy-tailed reward distribution, and the challenging credit assignment. We show how a carefully implemented RL-agent that uses a GNN as the basic policy construct can address these challenges and obtain significant improvements over state-of-the-art techniques in three varieties of circuits, including the largest scale networks used in contemporary QC."> Abstract</a>
+                           <a href="https://arxiv.org/abs/2204.09052" class="btn btn-default">Paper </a>
+                       </div>
+                     </div><!-- end of row -->
+
+
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
