--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                       <h2>Multi-Task Learning as a Bargaining Game</h2>
                       <p>
                         Aviv Navon, Aviv Shamsian, Idan Achituve, Haggai Maron, Kenji Kawaguchi,Gal Chechik,Ethan Fetaya <br>
-                        <i> Technical report, January 2022  </i> <br>
+                        <i> International Conference on Machine Learning (ICML) 2022  </i> <br>
                       </p>
                       <a class="btn btn-default abstract" ptitle="In Multi-task learning (MTL), a joint model is trained to simultaneously make predictions for several tasks. Joint training reduces computation costs and improves data efficiency; however, since the gradients of these different tasks may conflict, training a joint model for MTL often yields lower performance than its corresponding single-task counterparts. A common method for alleviating this issue is to combine per-task gradients into a joint update direction using a particular heuristic. In this paper, we propose viewing the gradients combination step as a bargaining game, where tasks negotiate to reach an agreement on a joint direction of parameter update. Under certain assumptions, the bargaining problem has a unique solution, known as the \emph{Nash Bargaining Solution}, which we propose to use as a principled approach to multi-task learning. We describe a new MTL optimization procedure, Nash-MTL, and derive theoretical guarantees for its convergence. Empirically, we show that Nash-MTL achieves state-of-the-art results on multiple MTL benchmarks in various domains."> Abstract</a>
                       <a href="https://arxiv.org/abs/2202.01017" class="btn btn-default">Paper </a>
@@ -200,7 +200,8 @@
                            <h2>Optimizing Tensor Network Contraction Using Reinforcement Learning</h2>
                            <p>
                              Eli A Meirom, Haggai Maron, Shie Mannor, Gal Chechik <br>
-                             <i> The Multi-disciplinary Conference on Reinforcement Learning and Decision Making, RLDM 2022 </i> <br>
+                             <i> International Conference on Machine Learning (ICML) 2022 </i> <br>
+                             Also in <i> The Multi-disciplinary Conference on Reinforcement Learning and Decision Making, RLDM 2022 </i> <br>
                            </p>
                            <a class="btn btn-default abstract" ptitle="Quantum Computing (QC) stands to revolutionize computing, but is currently still limited. To develop and test quantum algorithms today, quantum circuits are often simulated on classical computers. Simulating a complex quantum circuit requires computing the contraction of a large network of tensors. The order (path) of contraction can have a drastic effect on the computing cost, but finding an efficient order is a challenging combinatorial optimization problem. We propose a Reinforcement Learning (RL) approach combined with Graph Neural Networks (GNN) to address the contraction ordering problem. The problem is extremely challenging due to the huge search space, the heavy-tailed reward distribution, and the challenging credit assignment. We show how a carefully implemented RL-agent that uses a GNN as the basic policy construct can address these challenges and obtain significant improvements over state-of-the-art techniques in three varieties of circuits, including the largest scale networks used in contemporary QC."> Abstract</a>
                            <a href="https://arxiv.org/abs/2204.09052" class="btn btn-default">Paper </a>
