--- a/index.html
+++ b/index.html
@@ -133,6 +133,27 @@
             <h1>Publications</h1>
         </div>
       </div>
+      <!--Open problems -->
+         <div class="row" id="templatemo_publications_LargeScaleBD">
+             <div class="col-md-1"></div>
+             <div class="col-md-5 col-sm-7 col-xs-24">
+                 <img src="projects/Rethinking_subgraphs/rep.png" width="300" " alt="">
+             </div>
+             <div class="col-md-1"></div>
+             <div class="col-md-16">
+                 <h2>Understanding and Extending Subgraph GNNs by Rethinking Their Symmetries</h2>
+                 <p>
+                   Fabrizio Frasca*, Beatrice Bevilacqua*, Michael M. Bronstein, Haggai Maron
+
+                   <br>
+                   <i> Technical report, May 2022  </i> <br>
+                 </p>
+                 <a class="btn btn-default abstract" ptitle="Subgraph GNNs are a recent class of expressive Graph Neural Networks (GNNs) which model graphs as collections of subgraphs. So far, the design space of possible Subgraph GNN architectures as well as their basic theoretical properties are still largely unexplored. In this paper, we study the most prominent form of subgraph methods, which employs node-based subgraph selection policies such as ego-networks or node marking and deletion. We address two central questions: (1) \emph{What is the upper-bound of the expressive power of these methods?} and (2) \emph{What is the family of equivariant message passing layers on these sets of subgraphs?}.
+Our first step in answering these questions is a novel symmetry analysis which shows that modelling the symmetries of node-based subgraph collections requires a significantly smaller symmetry group than the one adopted in previous works. This analysis is then used to establish a link between Subgraph GNNs and Invariant Graph Networks (IGNs).
+We answer the questions above by first bounding the expressive power of subgraph methods by 3-WL, and then proposing a general family of message-passing layers for subgraph methods that generalises all previous node-based Subgraph GNNs. Finally, we design a novel Subgraph GNN dubbed \SUN{}, which theoretically unifies previous architectures while providing better empirical performance on multiple benchmarks."> Abstract</a>
+                 <a href="https://arxiv.org/abs/2206.11140" class="btn btn-default">Paper </a>
+             </div>
+           </div><!-- end of row -->
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -144,7 +165,7 @@
              <div class="col-md-16">
                  <h2>Sign and Basis Invariant Networks for Spectral Graph Representation Learning</h2>
                  <p>
-                   Derek Lim, Joshua Robinson, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka<br>
+                   Derek Lim*, Joshua Robinson*, Lingxiao Zhao, Tess Smidt, Suvrit Sra, Haggai Maron, Stefanie Jegelka<br>
                    <i> Technical report, February 2022  </i> <br>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Many machine learning tasks involve processing eigenvectors derived from data. Especially valuable are Laplacian eigenvectors, which capture useful structural information about graphs and other geometric objects. However, ambiguities arise when computing eigenvectors: for each eigenvector v, the sign flipped −v is also an eigenvector. More generally, higher dimensional eigenspaces contain infinitely many choices of basis eigenvectors. These ambiguities make it a challenge to process eigenvectors and eigenspaces in a consistent way. In this work we introduce SignNet and BasisNet -- new neural architectures that are invariant to all requisite symmetries and hence process collections of eigenspaces in a principled manner. Our networks are universal, i.e., they can approximate any continuous function of eigenvectors with the proper invariances. They are also theoretically strong for graph representation learning -- they can approximate any spectral graph convolution, can compute spectral invariants that go beyond message passing neural networks, and can provably simulate previously proposed graph positional encodings. Experiments show the strength of our networks for learning spectral graph filters and learning graph positional encodings."> Abstract</a>
