--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
          <div class="row" id="templatemo_publications_LargeScaleBD">
              <div class="col-md-1"></div>
              <div class="col-md-5 col-sm-7 col-xs-24">
-                 <img src="projects/Rethinking_subgraphs/rep.png" width="300" " alt="">
+                 <img src="projects/rethinking_subgraphs/rep.PNG" width="300" " alt="">
              </div>
              <div class="col-md-1"></div>
              <div class="col-md-16">
