--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@
                    Fabrizio Frasca*, Beatrice Bevilacqua*, Michael M. Bronstein, Haggai Maron
 
                    <br>
-                   <i> Technical report, July 2022  </i> <br>
+                   <i> 36th Annual Conference on Neural Information Processing Systems (NeurIPS 2022)  </i>
+                   <p style="color:red;"> Oral presentation (1.7% acceptance rate)</p> <br>
                  </p>
                  <a class="btn btn-default abstract" ptitle="Subgraph GNNs are a recent class of expressive Graph Neural Networks (GNNs) which model graphs as collections of subgraphs. So far, the design space of possible Subgraph GNN architectures as well as their basic theoretical properties are still largely unexplored. In this paper, we study the most prominent form of subgraph methods, which employs node-based subgraph selection policies such as ego-networks or node marking and deletion. We address two central questions: (1) \emph{What is the upper-bound of the expressive power of these methods?} and (2) \emph{What is the family of equivariant message passing layers on these sets of subgraphs?}.
 Our first step in answering these questions is a novel symmetry analysis which shows that modelling the symmetries of node-based subgraph collections requires a significantly smaller symmetry group than the one adopted in previous works. This analysis is then used to establish a link between Subgraph GNNs and Invariant Graph Networks (IGNs).
@@ -154,6 +155,29 @@ We answer the questions above by first bounding the expressive power of subgraph
                  <a href="https://arxiv.org/abs/2206.11140" class="btn btn-default">Paper </a>
              </div>
            </div><!-- end of row -->
+
+
+
+
+           <!--Open problems -->
+              <div class="row" id="templatemo_publications_LargeScaleBD">
+                  <div class="col-md-1"></div>
+                  <div class="col-md-5 col-sm-7 col-xs-24">
+                      <img src="projects/gen_pos_enc/rep.png" width="300" " alt="">
+                  </div>
+                  <div class="col-md-1"></div>
+                  <div class="col-md-16">
+                      <h2>	Generalized Laplacian Positional Encoding for Graph Representation Learning</h2>
+                      <p>
+                      Sohir Maskey*, Ali Parviz*, Maximilian Thiessen, Hannes Stärk, Ylli Sadikaj, Haggai Maron<br>
+                        <i> NeurIPS 2022 Workshop on Symmetry and Geometry in Neural Representations  </i> <br>
+                      </p>
+                      <a class="btn btn-default abstract" ptitle="Graph neural networks (GNNs) are the primary tool for processing graph-structured data. Unfortunately, the most commonly used GNNs, called Message Passing Neural Networks (MPNNs) suffer from several fundamental limitations. To overcome these limitations, recent works have adapted the idea of positional encodings to graph data. This paper draws inspiration from the recent success of Laplacian-based positional encoding and defines a novel family of positional encoding schemes for graphs. We accomplish this by generalizing the optimization problem that defines the Laplace embedding to more general dissimilarity functions rather than the 2-norm used in the original formulation. This family of positional encodings is then instantiated by considering p-norms. We discuss a method for calculating these  positional encoding schemes, implement it in PyTorch and demonstrate how the resulting positional encoding captures different properties of the graph. Furthermore, we demonstrate that this novel family of positional encodings can improve the expressive power of MPNNs. Lastly, we present preliminary experimental results."> Abstract</a>
+                      <a href="https://arxiv.org/abs/2202.13013" class="btn btn-default">Paper </a>
+                  </div>
+                </div><!-- end of row -->
+
+
 
       <!--Open problems -->
          <div class="row" id="templatemo_publications_LargeScaleBD">
@@ -184,7 +208,7 @@ We answer the questions above by first bounding the expressive power of subgraph
                       <h2>A Simple and Universal Rotation Equivariant Point-cloud Network </h2>
                       <p>
                         Ben Finkelshtein, Chaim Baskin, Haggai Maron, Nadav Dym<br>
-                        <i> Technical report, February 2022  </i> <br>
+                        <i> Workshop on Topology, Algebra, and Geometry in Learning, ICML 2022  </i> <br>
                       </p>
                       <a class="btn btn-default abstract" ptitle="Equivariance to permutations and rigid motions is an important inductive bias for various 3D learning problems. Recently it has been shown that the equivariant Tensor Field Network architecture is universal -- it can approximate any equivariant function. In this paper we suggest a much simpler architecture, prove that it enjoys the same universality guarantees and evaluate its performance on Modelnet40. "> Abstract</a>
                       <a href="https://arxiv.org/abs/2203.01216" class="btn btn-default">Paper </a>
